# jpeg_study

./: .gitignore  CMakeLists.txt  makefile
docs/: Doxyfile
example/: CMakeLists.txt  example.cpp
html/: _client_u_s_b_8h.html  _client_u_s_b_8h__dep__incl.map  _client_u_s_b_8h__dep__incl.md5  _client_u_s_b_8h__incl.map  _client_u_s_b_8h__incl.md5  _client_u_s_b_8h_source.html  _encode_engine_8cpp.html  _encode_engine_8cpp__incl.map  _encode_engine_8cpp__incl.md5  _encode_engine_8cpp_source.html  _encode_engine_8h.html  _encode_engine_8h__dep__incl.map  _encode_engine_8h__dep__incl.md5  _encode_engine_8h__incl.map  _encode_engine_8h__incl.md5  _encode_engine_8h_source.html  _encoder_8cpp.html  _encoder_8cpp__incl.map  _encoder_8cpp__incl.md5  _encoder_8cpp_source.html  _encoder_8h.html  _encoder_8h__dep__incl.map  _encoder_8h__dep__incl.md5  _encoder_8h__incl.map  _encoder_8h__incl.md5  _encoder_8h_source.html  _optimize___n_e_o_n_8h.html  _optimize___n_e_o_n_8h__dep__incl.map  _optimize___n_e_o_n_8h__dep__incl.md5  _optimize___n_e_o_n_8h__incl.map  _optimize___n_e_o_n_8h__incl.md5  _optimize___n_e_o_n_8h_source.html  _optimize___s_s_e2_8h.html  _optimize___s_s_e2_8h__dep__incl.map  _optimize___s_s_e2_8h__dep__incl.md5  _optimize___s_s_e2_8h__incl.map  _optimize___s_s_e2_8h__incl.md5  _optimize___s_s_e2_8h_source.html  _r_e_a_d_m_e_8md.html  _thread_base_8cpp.html  (+982 more)
libusbdisp/: .gitignore  capture.cpp  capture.h  dep_check.sh  jpegenc.c  main.c  makefile  usb-disp Block diagram.drawio  usbDisplay.cpp  usbdev.cpp  usbdev.h
test/: DCT_Quantization.cpp  main.cpp  (+2 more)
(+391 files in other folders)
